# sim_localization

./: CMakeLists.txt  README.md  package.xml
config/: laser_simulator_params.yaml
launch/: laser_simulator.launch.py  map_display.launch.py
maps/basketball_court/: map.pgm  map.yaml  map_generate.py
rviz/: sim_localization.rviz
sim_localization/: relocalization.py  test.ipynb
src/: fake_laser_generator.cpp  laser_simulator.cpp  scan_listener.cpp  sensor_data_to_scan.cpp
